--- a/pom.xml
+++ b/pom.xml
@@ -101,13 +101,9 @@
             <version>${lombok.version}</version>
         </dependency>
         <dependency>
-          <groupId>org.springframework.amqp</groupId>
-          <artifactId>spring-rabbit</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.rabbitmq.jms</groupId>
-            <artifactId>rabbitmq-jms</artifactId>
-            <version>1.6.0</version>
+            <groupId>org.apache.activemq</groupId>
+            <artifactId>activemq-broker</artifactId>
+            <version>5.13.2</version>
         </dependency>
         <dependency>
             <groupId>net.codesup.util</groupId>
